feat: add GitHub Pages deployment and branding
- Add GitHub Actions workflow for automatic deployment
- Update branding to 'Learn with Fath'
- Add live site link to README
- Configure Pages to serve from /codelabs directory

--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Learning Platform - Interactive Tutorials</title>
+    <title>Learn with Fath - Interactive Tutorials</title>
     <style>
         * {
             margin: 0;
@@ -203,7 +203,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🎓 My Learning Platform</h1>
+            <h1>🎓 Learn with Fath</h1>
             <p class="subtitle">Interactive tutorials to master new skills</p>
             
             <div class="stats">
