--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -206,6 +206,10 @@
             <h1>🎓 Learn with Fath</h1>
             <p class="subtitle">Interactive tutorials to master new skills</p>
             
+            <a href="learning-path.html" style="display: inline-block; margin: 20px 0; padding: 12px 30px; background: rgba(255,255,255,0.2); color: white; text-decoration: none; border-radius: 25px; font-weight: bold; transition: all 0.3s;" onmouseover="this.style.background='rgba(255,255,255,0.3)'; this.style.transform='translateY(-2px)'" onmouseout="this.style.background='rgba(255,255,255,0.2)'; this.style.transform='translateY(0)'">
+                🎯 Qiscus Adopt Stack Learning Path →
+            </a>
+            
             <div class="stats">
                 <div class="stat-item">
                     <span class="stat-number" id="totalCodelabs">6</span>
