feat: update Phase 1 with 9 Go Fundamental babs
- Replace 4 old sub-phases with 9 comprehensive Go babs
- Update stats: 24 total sub-phases, 9 completed (~38% progress)
- Each bab links to dedicated tutorial with deliverable
- Maintain completed status for all Phase 1 items

Phase 1 now includes:
- Bab 1: Dasar-dasar Go
- Bab 2: Control Flow
- Bab 3: Data Structures
- Bab 4: Functions
- Bab 5: Advanced Types
- Bab 6: Concurrency
- Bab 7: Error Handling
- Bab 8: Standard Library
- Bab 9: Web & Network

--- a/codelabs/learning-path.html
+++ b/codelabs/learning-path.html
@@ -369,15 +369,15 @@
                     <div class="stat-label">Total Phases</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">19</div>
+                    <div class="stat-number">24</div>
                     <div class="stat-label">Sub-Phases</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">1</div>
+                    <div class="stat-number">9</div>
                     <div class="stat-label">Completed</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">~16%</div>
+                    <div class="stat-number">~38%</div>
                     <div class="stat-label">Progress</div>
                 </div>
             </div>
@@ -402,75 +402,156 @@
                 </div>
                 <div class="phase-content">
                     <div class="sub-phases">
-                        <!-- 1.1 -->
+                        <!-- Bab 1 -->
                         <div class="sub-phase completed">
                             <div class="sub-phase-header">
                                 <div>
-                                    <div class="sub-phase-title">1.1 Basic Go</div>
-                                    <div class="sub-phase-focus">Syntax, types, testing, interfaces, concurrency intro</div>
+                                    <div class="sub-phase-title">Bab 1: Dasar-dasar Go</div>
+                                    <div class="sub-phase-focus">Hello World, Values, Variables, Constants</div>
                                 </div>
                                 <span class="check-icon">✓</span>
                             </div>
                             <div class="sub-phase-deliverable">
-                                <strong>Deliverable:</strong> Mini Go console apps
+                                <strong>Deliverable:</strong> Kalkulator Persegi Panjang
                             </div>
                             <div class="sub-phase-actions">
-                                <a href="go-dasar-pemula/" class="action-button btn-primary">📚 Buka Tutorial</a>
-                                <a href="https://gobyexample.com/" target="_blank" class="action-button btn-secondary">🔗 Go by Example</a>
+                                <a href="go-bab1-dasar/" class="action-button btn-primary">📚 Buka Tutorial</a>
                             </div>
                         </div>
 
-                        <!-- 1.2 -->
+                        <!-- Bab 2 -->
                         <div class="sub-phase completed">
                             <div class="sub-phase-header">
                                 <div>
-                                    <div class="sub-phase-title">1.2 HTTP & REST API</div>
-                                    <div class="sub-phase-focus">net/http, handlers, JSON, routing patterns</div>
+                                    <div class="sub-phase-title">Bab 2: Control Flow</div>
+                                    <div class="sub-phase-focus">For loops, If/Else, Switch</div>
                                 </div>
                                 <span class="check-icon">✓</span>
                             </div>
                             <div class="sub-phase-deliverable">
-                                <strong>Deliverable:</strong> CRUD Notes API (local)
+                                <strong>Deliverable:</strong> Sistem Grading Siswa
                             </div>
                             <div class="sub-phase-actions">
-                                <a href="go-http-rest-api/" class="action-button btn-primary">📚 Buka Tutorial</a>
-                                <a href="https://pkg.go.dev/net/http" target="_blank" class="action-button btn-secondary">🔗 Go net/http Docs</a>
+                                <a href="go-bab2-control-flow/" class="action-button btn-primary">📚 Buka Tutorial</a>
                             </div>
                         </div>
 
-                        <!-- 1.3 -->
+                        <!-- Bab 3 -->
                         <div class="sub-phase completed">
                             <div class="sub-phase-header">
                                 <div>
-                                    <div class="sub-phase-title">1.3 Packages & Modules</div>
-                                    <div class="sub-phase-focus">go mod, project structure, versioning</div>
+                                    <div class="sub-phase-title">Bab 3: Data Structures</div>
+                                    <div class="sub-phase-focus">Arrays, Slices, Maps</div>
                                 </div>
                                 <span class="check-icon">✓</span>
                             </div>
                             <div class="sub-phase-deliverable">
-                                <strong>Deliverable:</strong> Reusable modules & clear folders
+                                <strong>Deliverable:</strong> Sistem Inventori Toko
                             </div>
                             <div class="sub-phase-actions">
-                                <a href="go-packages-modules/" class="action-button btn-primary">📚 Buka Tutorial</a>
-                                <a href="https://go.dev/blog/using-go-modules" target="_blank" class="action-button btn-secondary">🔗 Go Modules Docs</a>
+                                <a href="go-bab3-data-structures/" class="action-button btn-primary">📚 Buka Tutorial</a>
                             </div>
                         </div>
 
-                        <!-- 1.4 -->
+                        <!-- Bab 4 -->
                         <div class="sub-phase completed">
                             <div class="sub-phase-header">
                                 <div>
-                                    <div class="sub-phase-title">1.4 Concurrency & Goroutines</div>
-                                    <div class="sub-phase-focus">goroutines, channels, select, worker pool</div>
+                                    <div class="sub-phase-title">Bab 4: Functions</div>
+                                    <div class="sub-phase-focus">Multiple Return, Variadic, Closures, Recursion</div>
                                 </div>
                                 <span class="check-icon">✓</span>
                             </div>
                             <div class="sub-phase-deliverable">
-                                <strong>Deliverable:</strong> Concurrent worker demo
+                                <strong>Deliverable:</strong> Kalkulator Lengkap
                             </div>
                             <div class="sub-phase-actions">
-                                <a href="go-concurrency-goroutines/" class="action-button btn-primary">📚 Buka Tutorial</a>
-                                <a href="https://go.dev/blog/pipelines" target="_blank" class="action-button btn-secondary">🔗 Concurrency Patterns</a>
+                                <a href="go-bab4-functions/" class="action-button btn-primary">📚 Buka Tutorial</a>
+                            </div>
+                        </div>
+
+                        <!-- Bab 5 -->
+                        <div class="sub-phase completed">
+                            <div class="sub-phase-header">
+                                <div>
+                                    <div class="sub-phase-title">Bab 5: Advanced Types</div>
+                                    <div class="sub-phase-focus">Pointers, Strings, Structs, Methods, Interfaces</div>
+                                </div>
+                                <span class="check-icon">✓</span>
+                            </div>
+                            <div class="sub-phase-deliverable">
+                                <strong>Deliverable:</strong> Sistem Manajemen Karyawan
+                            </div>
+                            <div class="sub-phase-actions">
+                                <a href="go-bab5-advanced-types/" class="action-button btn-primary">📚 Buka Tutorial</a>
+                            </div>
+                        </div>
+
+                        <!-- Bab 6 -->
+                        <div class="sub-phase completed">
+                            <div class="sub-phase-header">
+                                <div>
+                                    <div class="sub-phase-title">Bab 6: Concurrency</div>
+                                    <div class="sub-phase-focus">Goroutines, Channels, Select, WaitGroups</div>
+                                </div>
+                                <span class="check-icon">✓</span>
+                            </div>
+                            <div class="sub-phase-deliverable">
+                                <strong>Deliverable:</strong> Web Scraper Concurrent
+                            </div>
+                            <div class="sub-phase-actions">
+                                <a href="go-bab6-concurrency/" class="action-button btn-primary">📚 Buka Tutorial</a>
+                            </div>
+                        </div>
+
+                        <!-- Bab 7 -->
+                        <div class="sub-phase completed">
+                            <div class="sub-phase-header">
+                                <div>
+                                    <div class="sub-phase-title">Bab 7: Error Handling</div>
+                                    <div class="sub-phase-focus">Errors, Panic, Defer, Recover</div>
+                                </div>
+                                <span class="check-icon">✓</span>
+                            </div>
+                            <div class="sub-phase-deliverable">
+                                <strong>Deliverable:</strong> File Processor Robust
+                            </div>
+                            <div class="sub-phase-actions">
+                                <a href="go-bab7-error-handling/" class="action-button btn-primary">📚 Buka Tutorial</a>
+                            </div>
+                        </div>
+
+                        <!-- Bab 8 -->
+                        <div class="sub-phase completed">
+                            <div class="sub-phase-header">
+                                <div>
+                                    <div class="sub-phase-title">Bab 8: Standard Library</div>
+                                    <div class="sub-phase-focus">String, Time, JSON, File I/O</div>
+                                </div>
+                                <span class="check-icon">✓</span>
+                            </div>
+                            <div class="sub-phase-deliverable">
+                                <strong>Deliverable:</strong> Todo List App
+                            </div>
+                            <div class="sub-phase-actions">
+                                <a href="go-bab8-standard-library/" class="action-button btn-primary">📚 Buka Tutorial</a>
+                            </div>
+                        </div>
+
+                        <!-- Bab 9 -->
+                        <div class="sub-phase completed">
+                            <div class="sub-phase-header">
+                                <div>
+                                    <div class="sub-phase-title">Bab 9: Web & Network</div>
+                                    <div class="sub-phase-focus">HTTP Server/Client, Context</div>
+                                </div>
+                                <span class="check-icon">✓</span>
+                            </div>
+                            <div class="sub-phase-deliverable">
+                                <strong>Deliverable:</strong> REST API Sederhana
+                            </div>
+                            <div class="sub-phase-actions">
+                                <a href="go-bab9-web-network/" class="action-button btn-primary">📚 Buka Tutorial</a>
                             </div>
                         </div>
                     </div>
