--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
             
             <div class="stats">
                 <div class="stat-item">
-                    <span class="stat-number" id="totalCodelabs">3</span>
+                    <span class="stat-number" id="totalCodelabs">4</span>
                     <span class="stat-label">Tutorials</span>
                 </div>
                 <div class="stat-item">
@@ -319,6 +319,37 @@
                 </div>
 
                 <span class="cta-button">Mulai Learning Path →</span>
+            </a>
+
+            <!-- Qiscus Multichannel Widget Integration -->
+            <a href="codelabs/qiscus-multichannel-widget-integration/" class="codelab-card" data-title="qiscus multichannel widget integration chat javascript" data-tags="qiscus javascript widget chat multichannel customer-support">
+                <h2>💬 Qiscus Multichannel Widget Integration</h2>
+                <p class="summary">Integrate Qiscus Multichannel Widget into your website. Learn session management, event handling, customization, and production deployment.</p>
+                
+                <div class="codelab-meta">
+                    <div class="meta-item">
+                        <svg fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"/>
+                        </svg>
+                        ~39 minutes
+                    </div>
+                    <div class="meta-item">
+                        <svg fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M9 4.804A7.968 7.968 0 005.5 4c-1.255 0-2.443.29-3.5.804v10A7.969 7.969 0 015.5 14c1.669 0 3.218.51 4.5 1.385A7.962 7.962 0 0114.5 14c1.255 0 2.443.29 3.5.804v-10A7.968 7.968 0 0014.5 4c-1.255 0-2.443.29-3.5.804V12a1 1 0 11-2 0V4.804z"/>
+                        </svg>
+                        12 sections
+                    </div>
+                </div>
+
+                <div class="tags">
+                    <span class="tag">Web Development</span>
+                    <span class="tag">JavaScript</span>
+                    <span class="tag">Chat Integration</span>
+                    <span class="tag">Customer Support</span>
+                    <span class="tag">Qiscus</span>
+                </div>
+
+                <span class="cta-button">Start Learning →</span>
             </a>
         </div>
 
