feat: add disclaimer section to widget integration guide
- Added bilingual (English/Indonesian) disclaimer notice at the start of the documentation
- Clarified unofficial status and liability limitations of the open-source project
- Emphasized user's freedom to modify the code as needed
- Maintained existing "What You'll Learn" section structure

--- a/codelabs/qiscus-multichannel-widget-integration/index.html
+++ b/codelabs/qiscus-multichannel-widget-integration/index.html
@@ -29,7 +29,12 @@
                   feedback-link="https://github.com/fathullahqiscus/support-multichannel-widget-embed-version">
     
       <google-codelab-step label="Overview" duration="2">
-        <h2 class="checklist" is-upgraded>What You&#39;ll Learn</h2>
+        <h2 is-upgraded>⚠️ Disclaimer / Penafian</h2>
+<aside class="warning"><p><strong>English:</strong><br>This is an <strong>unofficial</strong> open-source project. Any consequences or issues arising from the use of this project are <strong>not the responsibility of Qiscus</strong>. As this is open-source software, you are free to modify it as extensively as you wish.</p>
+</aside>
+<aside class="warning"><p><strong>Bahasa Indonesia:</strong><br>Project ini bersifat <strong>unofficial</strong> artinya segala apapun akibat yang akan timbul <strong>bukan tanggung jawab dari sisi Qiscus</strong>, dan karena sifatnya open source boleh dimodifikasi semaksimal mungkin.</p>
+</aside>
+<h2 class="checklist" is-upgraded>What You&#39;ll Learn</h2>
 <ul class="checklist">
 <li>How to integrate Qiscus Multichannel Widget into your website</li>
 <li>Configure the widget with your app credentials</li>
