feat: add career codelab for overcoming imposter syndrome
- Created comprehensive codelab guide to help mobile developers overcome imposter syndrome during job applications
- Added detailed sections covering reality checks, gap analysis, learning strategies, and mindset shifts
- Included practical exercises, templates, and action plans for immediate implementation
- Structured content with clear timelines, examples, and data-driven insights from industry research
- Added positive/negative callouts to highlight key

--- a/codelabs/index.html
+++ b/codelabs/index.html
@@ -208,7 +208,7 @@
             
             <div class="stats">
                 <div class="stat-item">
-                    <span class="stat-number" id="totalCodelabs">4</span>
+                    <span class="stat-number" id="totalCodelabs">5</span>
                     <span class="stat-label">Tutorials</span>
                 </div>
                 <div class="stat-item">
@@ -350,6 +350,37 @@
                 </div>
 
                 <span class="cta-button">Start Learning →</span>
+            </a>
+
+            <!-- Career Advice - Overcome Imposter Syndrome -->
+            <a href="career-overcome-imposter-syndrome/" class="codelab-card" data-title="career advice imposter syndrome job application mobile developer" data-tags="career advice mobile-development job-search confidence imposter-syndrome">
+                <h2>💼 Mengatasi Imposter Syndrome Saat Melamar Pekerjaan</h2>
+                <p class="summary">Panduan praktis untuk mobile developer yang merasa tidak PD saat melamar kerja. Pelajari strategi "Learn While Applying", gap analysis, dan mindset shift untuk meningkatkan confidence Anda.</p>
+                
+                <div class="codelab-meta">
+                    <div class="meta-item">
+                        <svg fill="currentColor" viewBox="0 0 20 20">
+                            <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"/>
+                        </svg>
+                        ~73 minutes
+                    </div>
+                    <div class="meta-item">
+                        <svg fill="currentColor" viewBox="0 0 20 20">
+                            <path d="M9 4.804A7.968 7.968 0 005.5 4c-1.255 0-2.443.29-3.5.804v10A7.969 7.969 0 015.5 14c1.669 0 3.218.51 4.5 1.385A7.962 7.962 0 0114.5 14c1.255 0 2.443.29 3.5.804v-10A7.968 7.968 0 0014.5 4c-1.255 0-2.443.29-3.5.804V12a1 1 0 11-2 0V4.804z"/>
+                        </svg>
+                        11 sections
+                    </div>
+                </div>
+
+                <div class="tags">
+                    <span class="tag">Career Advice</span>
+                    <span class="tag">Mobile Development</span>
+                    <span class="tag">Job Search</span>
+                    <span class="tag">Confidence Building</span>
+                    <span class="tag">Indonesia</span>
+                </div>
+
+                <span class="cta-button">Mulai Belajar →</span>
             </a>
         </div>
 
